more playing around

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "4.4.6",
     "@angular/router": "4.4.6",
     "nativescript-angular": "4.4.1",
+    "nativescript-cardview": "^2.0.4",
     "nativescript-fingerprint-auth": "5.0.0",
     "nativescript-gradient": "2.0.1",
     "nativescript-pro-ui": "3.2.0",
